--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
+    "axios": "^0.19.2",
     "buffer": "^5.5.0",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "expo-linear-gradient": "~8.1.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
