--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "mundo globo",
+    "name": "Mundo Globo",
     "slug": "mundo-globo",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
